# Seeker-Backend

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/: bootstrap.py  main.py
src/dtos/ai/: ai_conversation_log.py
src/dtos/ai_log/: ai_conversation_log.py
src/dtos/auth/: auth_dtos.py
src/dtos/google/: credentials.py  oauth_dtos.py  vertex.py
src/dtos/job/: crawler_dtos.py  job_dtos.py
src/dtos/mail/: __init__.py  mail_dtos.py
src/dtos/repository/: cursor.py  paginator.py
src/dtos/responses/: api_response.py
src/dtos/shared/: company.py
src/middleware/: oauth.py  quota.py
src/models/: __init__.py  ai_chat_log.py  ai_conversation_log.py  job.py  user.py
src/models/ai/: ai_conversation_log.py
src/models/job/: company.py  job.py
src/models/user/: execution_count.py  quota.py  user.py
src/repository/: __init__.py  ai_chat_log.py  ai_conversation_log.py  cursor.py  job.py  order_by.py  paginator.py  user.py
src/request/job/: crawl_job.py  get_jobs.py  job_fitting_ai_by_url.py
src/request/mail/: list_mails.py
src/responses/auth/: google_oauth_config.py  google_oauth_url.py  google_oauth_verify.py  logout.py  refresh.py
src/responses/conversation_log/: get_conversation_log.py  get_conversation_logs.py
src/responses/job/: crawl_job.py  fitting_ai_by_url.py  (+2 more)
src/routers/: conversation_log.py  job.py  mail.py  user.py
src/utils/: logger.py  time.py  typings.py
tests/unit/: __init__.py
(+79 files in other folders)
